--- a/public/template_index.html
+++ b/public/template_index.html
@@ -85,6 +85,9 @@
                 <input type="submit" value="Post">
             </form>
 
+            <form action="/logout" method="post" enctype="application/x-www-form-urlencoded">
+                <input type="submit" value="Logout">
+            </form>
 
             <form action="/profile-pic" id="image-form" method="post" enctype="multipart/form-data">
                 <br />
