feat: xsrf generate + validate

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -42,6 +42,7 @@
                 </label>
                 <button id="chat-button" onclick="sendChat()">Send</button>
             </div>
+            <input id="xsrf" value="{{xsrf_token}}" name="xsrf_token" hidden>
 
         </div>
 
