feat: spotify oauth ask for authorization grant

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -86,6 +86,10 @@
                 <input type="submit" value="Post">
             </form>
 
+            <form action="/login_spotify" method="post">
+                <input type="submit" value="Login with Spotify">
+            </form>
+
             <form action="/logout" method="post" enctype="application/x-www-form-urlencoded">
                 <input type="submit" value="Logout">
             </form>
