feat: spotify access request

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -90,7 +90,7 @@
                 <input type="submit" value="Login with Spotify">
             </form>
 
-            <form action="/logout" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="/logout" method="post">
                 <input type="submit" value="Logout">
             </form>
 
