feat: abstracted some request logic for use in multipart parsing, finished most of multipart parsing function

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -96,8 +96,12 @@
 
             <form action="/profile-pic" id="image-form" method="post" enctype="multipart/form-data">
                 <br />
-                <label for="form-file">Change profile picture: </label>
-                <input id="form-file" type="file" name="upload">
+                <!-- <label for="form-file">Change profile picture: </label>
+                <input id="form-file" type="file" name="upload"> -->
+                <label for="one">Field One: </label>
+                <input id="one" type="text" name="field_one">
+                <label for="two">Field Two: </label>
+                <input id="two" type="text" name="field_two">
                 <br />
                 <input type="submit" value="Post">
             </form>
