feat: image upload, fix: split request no \r\n\r\n, refactor: abstracted spotify get current song logic

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -14,7 +14,7 @@
 
     <div class="header">
         <div class="image_div">
-            <img src="/public/image/eagle.jpg" alt="It's an eagle" class="my_image" />
+            <img src="/public/image/eagle.jpg" alt="It's an eagle" class="my_image">
         </div>
         <div class="welcome-div">
             <p id="paragraph">
