feat: working on file signature parsing

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -44,7 +44,7 @@
             </div>
             <input id="xsrf" value="{{xsrf_token}}" name="xsrf_token" hidden>
 
-            <form action="/chat-pic" id="chat-pic-form" method="post" enctype="multipart/form-data">
+            <form action="/chat-media" id="chat-media-form" method="post" enctype="multipart/form-data">
                 <br />
                 <label for="pic-file">Pic: </label>
                 <input id="pic-file" type="file" name="upload">
