feat: dynamic filename hls files, adding ffmpeg hls conversion and video.js

--- a/public/template_index.html
+++ b/public/template_index.html
@@ -4,6 +4,9 @@
     <title>CSE312 Homework App</title>
     <link rel="stylesheet" type="text/css" href="/public/style.css" />
     <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
+    <!-- video.js -->
+    <link href="//vjs.zencdn.net/8.18.1/video-js.min.css" rel="stylesheet">
+    <script defer src="//vjs.zencdn.net/8.18.1/video.min.js"></script>
 </head>
 
 <body onload="welcome();">
